# VTM_12

./: .gitignore  CMakeLists.txt  LIBTORCH_INTEGRATION_GUIDE.md
cfg/: super_resolution.cfg
source/App/EncoderApp/: EncApp.cpp  EncAppCfg.cpp  EncAppCfg.h
source/App/NNModelTest/: CMakeLists.txt  NNModelTest.cpp
source/App/SuperResolutionTest/: CMakeLists.txt  SuperResolutionTest.cpp
source/Lib/CommonLib/: CMakeLists.txt  InterPrediction.cpp  InterPrediction.h  NNModelLoader.cpp  NNModelLoader.h  Slice.cpp  Slice.h  SuperResolution.cpp  SuperResolution.h  SuperResolutionNN.cpp  SuperResolutionNN.h
source/Lib/EncoderLib/: EncCfg.h  EncGOP.cpp  EncLib.cpp  EncLib.h
